Added grill interfaces and initial kitchen display
